<resources>
    <string name="app_name">Connect 4</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="inici">Inici</string>
    <string name="opComen">Començar partida</string>
    <string name="opAjuda">Ajuda</string>
    <string name="opSort">Sortir</string>
    <string name="autors">By: Marc Perez and Bikraj Singh</string>
    <string name="textAjuda">
        L,objectiu de Connecta 4 es alinear quatre fitxes
        sobre un tauler que pot estar format per 6 files
        i 7 columnes, 5 files i 7 columnes o 4 files i 7
        columnes dependent de quina opcio elegim en la
        pantalla de configuracio de patida.\n
        Pot elegir jugar contra la maquina o amb un altre
        jugador localment. El jugador 1 sempre sera el de
        color vermell, mentres que la maquina o el jugador
        2 sera el groc. Per torns, els jugadors han de se-
        leccionar la fletxa que indica la columna on anira
        la fitxa i aquesta caura a la posicio mes baixa. \n\
        Depenent del color de la fletxa ens indica el torn
        del jugador. Guanya la partida el primer que acons-
        egueixi alinear quatre fitxes consecutives d,un
        mateix color en horitzontal, vertical o diagonal.\n
        Si totes les columnes estan plenes pero ningu ha
        fet una fila valida, hi ha empat. Tambe en cas de
        seleccionar la casella de temps, hi haura un temps
        perque algun dels dos jugadors guanyi o la partida
        quedara com perdua.</string>
    <string name="ajudaTitol">Benvinguts al Connect 4</string>
    <string name="conf">Configuració</string>
    <string name="alias">· Nom del jugador:</string>
    <string name="rd1">6x7</string>
    <string name="rd2">5x7</string>
    <string name="rd3">4x7</string>
    <string name="nameHint">Jugador 1</string>
    <string name="graella">· Mida graella:</string>
    <string name="temps">· Control del temps:</string>
    <string name="toastNom">Nom del jugador obligatori</string>
    <string name="result">Resultats</string>
    <string name="data">· Data:</string>
    <string name="email">· E-mail destinatari:</string>
    <string name="enviaremail">Enviar e-mail</string>
    <string name="nova">Nova partida</string>
    <string name="exemail">exemple@gmail.com</string>
    <string name="otro">Afegir jugador 2:</string>
    <string name="emailNeed">E-mail necessari</string>
    <string name="win">Has guanyat &#160;</string>
    <string name="winToast">Enhorabona has guanyat!! &#160;</string>
    <string name="lose">Has perdut &#160;</string>
    <string name="loseToast">Has perdut!! &#160;</string>
    <string name="draw">Heu quedat empatats!!</string>
    <string-array name="sizes">
        <item>6</item>
        <item>5</item>
        <item>4</item>
    </string-array>
    <string name="aliasMenu">Jugador 1</string>
    <string name="aliasMenu2">Jugador 2 (Si vols PvP)</string>
    <string name="boardMenu">Graella</string>
    <string name="timeMenu">Control del temps</string>
    <string name="settingsMenu">Configuració</string>
    <string name="boardSize">Mida graella:</string>
    <string name="playerIdentifier">Nom jugador 1:</string>
    <string name="playerIdentifier2">Nom jugador 2:</string>
    <string name="moviments">· Moviments:</string>
    <string name="config">· Configuració:</string>
    <string name="controlActiu">Controlador del temps: activat</string>
    <string name="controlDesc">Controlador del temps: desactivat</string>
    <string name="graella1">Graella: &#160;</string>
    <string name="guanyat">Has guanyat &#160;</string>
    <string name="perdut">Has perdut &#160;</string>
    <string name="sobrat">&#160; y han sobrat &#160;</string>
    <string name="emailRes">Resultats de connect4</string>
    <string name="esgotat">El temps s"'"ha esgotat</string>
    <string name="alias1">Jugador 1: &#160;</string>
    <string name="alias2">Jugador 2: &#160;</string>
    <string name="alias3">CPU</string>
    <string name="data1">Data: &#160;</string>
    Time control in game
    <string name="sizeGraella">Mida que tindra la graella</string>
    <string name="nomJg1">Nom del jugador 1</string>
    <string name="nomJg2">Nom del jugador 2</string>
    <string name="menuBorrar">Borrar registre</string>
    <string name="menuInici">Anar a inici</string>




</resources>
